--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -50,7 +50,22 @@
         "2 ТБ - Рідко хто потребує такого великого обсягу пам'яті, але якщо вам потрібно зберігати багато графічних файлів або встановлювати більшість сучасних ігор, то це ваш вибір.",
         "4 ТБ - Вам потрібно зберігати кожен момент вашого життя, щоб передати вашу відеоісторію нащадкам, або ви вирішили завантажити всі проекти AAA, що існують наразі? Що ж, вибір за вами."
       ]
-    }
+    },
+    "prevBtn": "Назад",
+    "nextBtn": "Далі",
+    "toConfigBtn": "До конфігурації"
+  },
+  "newPc": {
+    "createNew": "Створити новий",
+    "save": "Зберегти конфіг",
+    "saved": "Збережено",
+    "newConfigLabel": "Новий конфіг",
+    "unexpectedError": "Ой, здається щось пішло не так..."
+  },
+  "userConfigs": {
+    "selectFromList": "Оберіть збірку зі списку зліва",
+    "noConfigs": "Ваш список конфігурацій порожній",
+    "delete": "Delete"
   },
   "signIn": {
     "header": "Вже маєте акаунт?",
@@ -58,15 +73,18 @@
     "email": "Email",
     "password": "Пароль",
     "signIn": "Увійти",
-    "signInGoogle": "Увійти через Google"
+    "signInGoogle": "Увійти через Google",
+    "wrongCredentials": "Неправильні пошта або пароль"
   },
   "signUp": {
     "header": "Вперше на сайті?",
     "subheader": "Реєстрація з поштою і паролем",
-    "name": "Ім'я",
+    "name": "Ім'я (псевдонім)",
     "email": "Email",
     "password": "Пароль",
     "confirmPassword": "Підтвердіть пароль",
-    "signUp": "Зареєструватись"
+    "signUp": "Реєстрація",
+    "passwordsMismatch": "Паролі не співпадають",
+    "unexpectedError": "Можливо такий користувач вже існує"
   }
 }
